# codewars-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml
.github/workflows/: ci.yml
assets/: index.html
src/: codewars.rs  commands.pest  commands.rs  index.html  main.rs  scheduling.rs  server.rs  settings.rs  slack.rs  storage.rs
src/api/: codewars.rs  mod.rs
src/api/slack/: event.rs  index.html  mod.rs  rtm.rs  web.rs  webhook.rs
