[package]
name = "codewars-bot"
version = "0.2.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Slack bot to report Codewars statistics"

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.0"
futures = "0.3.17"
hex = "0.4.3"
hmac = { version = "0.11.0", features = ["std"] }
humantime = "2.1.0"
log = { version = "0.4.14", features = ["release_max_level_trace"] }
once_cell = "1.8.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sha2 = "0.9.8"
thiserror = "1.0.30"
toml = "0.5.8"
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "0.3.1", default-features = false }
yansi = "0.5.0"

[dependencies.reqwest]
version = "0.11.6"
default-features = false
features = ["gzip", "json", "rustls-tls"]

[dependencies.tokio]
version = "1.12.0"
features = ["fs", "macros", "rt", "signal", "sync", "time"]

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
tempfile = "3.2.0"

[profile.release]
lto = true
panic = "abort"
