[package]
name = "codewars-bot"
version = "0.2.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A Slack bot to report Codewars statistics"

[dependencies]
anyhow = "1.0.52"
async-trait = "0.1.52"
bytes = "1.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
fern = "0.6.0"
futures = "0.3.19"
hex = "0.4.3"
hmac = { version = "0.12.0", features = ["std"] }
humantime = "2.1.0"
log = { version = "0.4.14", features = ["release_max_level_trace"] }
once_cell = "1.9.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
sha2 = "0.10.1"
thiserror = "1.0.30"
toml = "0.5.8"
url = { version = "2.2.2", features = ["serde"] }
warp = { version = "0.3.2", default-features = false }
yansi = "0.5.0"

[dependencies.reqwest]
version = "0.11.9"
default-features = false
features = ["gzip", "json", "rustls-tls"]

[dependencies.tokio]
version = "1.15.0"
features = ["fs", "macros", "rt", "signal", "sync", "time"]

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
tempfile = "3.3.0"

[profile.release]
lto = true
panic = "abort"
